--- a/style.css
+++ b/style.css
@@ -1,71 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Montserrat+Alternates:wght@500&family=Montserrat:wght@400;500&family=Nunito:wght@200&family=Poppins:wght@700&display=swap'); */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body {
-    font-family: "Montserrat",sans-serif;
-    background: #17427a;
-    color: #0a0000;
-    font-size: large;
-      background-image: url("https://cdn.pixabay.com/photo/2018/06/21/13/57/clouds-3488632_960_720.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;  
-    /* color: #f4f4f4; */
-    /* background: blue; */
-}
-.view{
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+    margin: 0;
+    background-color: rgb(128, 33, 33);
+    font-family: 'Roboto Mono', monospace;
+    background-image: url("https://cdn.pixabay.com/photo/2020/05/06/06/18/blue-5136251__340.jpg");
+    background-size: cover;
+}
+
+
+.Block {
+    background: #031e2b;
+    opacity: 0.6;
+    color: rgb(248, 244, 244);
+    padding: 2em;
+    border-radius: 25px;
+    width: 10%;
+    min-width: 420px;
+    margin: 1em;
+    
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+
+}
+
+.description {
+    text-transform: capitalize;
+
+}
+
+.search-bar {
+    text-transform: capitalize;
+    
+    
+
+}
+
+.search {
     display: flex;
     justify-content: center;
     align-items: center;
+
+}
+
+button {
+    margin: 0.10em;
+    border-radius: 50%;
+    border: none;
+    height: 3em;
+    width: 3em;
+    outline-style: none;
+    box-shadow: 2px 0.5px 7px 2px inset;
+}
+
+.search-bar {
+    border: none;
+    outline: none;
+    padding: 0.8em;
+    border-radius: 18px;
+    box-shadow: 5px 1px 10px 4px inset;
     text-align: center;
-    flex-direction: column;
-}
-h2{
-    padding: 10px;
-    font-size: 32px;
-}
-.search{
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-}
-.search input{
-    all: unset;
-    padding: 10px;
-    background-color: rgb(239, 243, 242);
-    color: #222222;
-    border-radius: 4px;
-    margin-bottom: 10px;
-}
-.search button{
-    all: unset; 
-    padding: 10px 30px;
-    background: linear-gradient(135deg, #2685a2 -50%, #022358 180%);
-    border-radius: 4px;
-    cursor: pointer;
     font-weight: bold;
-    transition: all o.2s ease-in-out;
+    font-size: 15px;
+    
 }
-.search button:hover{
-    transform: scale(1.03);
-}
-.details{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    width: 100%;
-}
-.details .weather{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 20px;
-    width: 100%;
-    justify-content: space-around;
+
+.weather.loading {
+    visibility: hidden;
+    max-height: 1px;
 }
